@@ -9,6 +9,9 @@
 	continue and validate the rest of command-line.  Thanks to Svyatoslav
 	Mishyn (a.k.a. juef).
 
+	Warn about --remote command being disabled at build-time.  Thanks to
+	Svyatoslav Mishyn (a.k.a. juef).
+
 	Fixed resetting "vborder" of 'fillchars' after it has been set to
 	something (as in `:set fillchars=vborder:\* fillchars&`).
 
